jannesen.ui.content: Fix dialog shadowbox not visible.

--- a/src/_scss/jannesen.ui.content.scss
+++ b/src/_scss/jannesen.ui.content.scss
@@ -137,8 +137,9 @@ div.jannesen-ui-content.-form {
 }
 
 div.jannesen-ui-content.-dialog {
+    overflow:   visible;
     > div.-scrollbox {
-        overflow:   hidden;
+        overflow:   visible;
 
         &.-scroll {
             overflow:   auto;
